kuber-file/alpine-secret-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-secret-env
spec:
  containers:
    - name: alpine-secret-env
      image: alpine
      command: ["sleep"]
      args: ["100000"]
