kuber-file/alpine-secret-volum.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-secret-volume
spec:
  containers:
    - name: alpine-secret-volume
      image: alpine
      command: ["sleep"]
      args: ["100000"]
      volumeMounts:
        - name: foo
          mountPath: /etc/config
  volumes:
    - name: foo
      secret:
        secretName: my-password
        items:
          - key: password
            path: my-group/my-username
