kuber-file/alpine-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-secret
spec:
  containers:
    - name: alpine-secret
      image: alpine
      command: ["sleep"]
      args: ["100000"]
