kuber-file/fluend.daemonset.hostport.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemonset-1
spec:
  selector:
    matchLabels:
      type: app
  template:
    metadata:
      labels:
        type: app
    spec:
      containers:
        - name: container
          image: kubetm/app:v1
          ports:
            - containerPort: 8080
              hostPort: 18080
