kuber-file/hello.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-gin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-gin
  template:
    metadata:
      labels:
        app: go-gin
    spec:
      containers:
        - name: go-gin
          image: tae2089/gin:1.0.1
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: ping
              port: 8080
          resources:
            limits:
              memory: "50Mi"
              cpu: "100m"
