kuber-file/hello.service.clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-clusterip-service
  namespace: default
spec:
  selector:
    app: go-gin
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
