kuber-file/hello.service.loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-gin-service
spec:
  type: LoadBalancer
  selector:
    app: go-gin
  ports:
    - name: http
      port: 80
      targetPort: 8080
