kuber-file/hello.ingress.url.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-gin-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "ingress-webapps"
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: go-gin-nodeport
                port:
                  number: 80
